--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -8,33 +8,12 @@ on:
   workflow_dispatch:
 
 jobs:
-    Run-Test:
-      runs-on: ubuntu-20.04
-      steps:
-        - name: Checkout repository
-          uses: actions/checkout@v1
-        - uses: actions/cache@v2
-          id: cache
-          with:
-            path: ~/.cache/pip
-        - name: Install pip dependencies
-          run: |
-            pip install --upgrade pip
-            pip install -r requirement.txt
-        - name: Run Test
-          run: python -m robot --outputdir results robot_framework/results
-        - name: Run Test and create report
-          run: python -m robot -d reports -x junit-report.xml "robot_framework/results"
-        - name: Run Robot Framework tests and generate report
-          run: |
-             echo "ROBOT_RC=$?" >> "$GITHUB_ENV"  
-        # - name: If Auto Test Pass Rate Not 100%, Job Will Fail
-        #   if: env.ROBOT_RC != '0'
-        #   run: |
-        #     echo "Auto Test Pass Rate Not 100%, Please Check Test Result"
-        #     exit 1
-        - name: Publish test results
-          uses: actions/upload-artifact@v2
-          with:
-            name: robot-test-results
-            path: results
+  robot_test:
+    runs-on: ubuntu-latest
+    - name: Robot Framework
+      uses: tarathep/robotframework-github-action@v1.0
+      with:
+        image: kietara/robot-framework
+        image_version: 1.0
+        tests_dir: '${{ github.workspace }}/tests/robot'
+        reports_dir: '${{ github.workspace }}/tests/robot/reports'
