--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -1,19 +1,39 @@
 name: Robot Framework CI
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-  workflow_dispatch:
+   push:
+    branches: [ "main" ]
+   pull_request:
+    branches: [ "main" ]
+   workflow_dispatch:
 
 jobs:
-  robot_test:
+  build:
     runs-on: ubuntu-latest
-    - name: Robot Framework
-      uses: tarathep/robotframework-github-action@v1.0
-      with:
-        image: kietara/robot-framework
-        image_version: 1.0
-        tests_dir: '${{ github.workspace }}/'
-        reports_dir: '${{ github.workspace }}/reports'
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Web Application
+        run: docker run -d -p 8000:8000 vncrtech/puppybank
+
+      - name: Setup Python
+        uses: actions/setup-python@v5.0.0
+        with:
+          python-version: 3.12.2
+
+      - name: Setup Workspace
+        run: |
+          python -m venv .venv
+          source .venv/bin/activate
+          pip install --upgrade robotframework-seleniumlibrary
+
+      - name: Run Tests
+        run: $GITHUB_WORKSPACE/.venv/bin/python3.12 -m robot.run --suite test-automation-101-rf.tests.smoke.login --outputdir $GITHUB_WORKSPACE/results .
+
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v4.3.1
+        with:
+          name: rf-results
+          path: results/
