--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -23,6 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install robotframework
           pip install robotframework-seleniumlibrary
+
+      - uses: browser-actions/setup-chrome@latest
+      - run: chrome --version
    
       - name: Test with RobotFramework
         run: robot .  
