--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -23,9 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install robotframework
           pip install robotframework-seleniumlibrary
-
-      - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
+          pip install robotframework robotframework-seleniumlibrary && npm install chromedriver
    
       - name: Test with RobotFramework
         run: robot .  
