--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -13,9 +13,8 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        python-version: [3.8, 3.11]  # 3.12, pypy-3.9
-        rf-version: [5.0.1, 6.1.1, 7.0]
-        selenium-version: [4.20.0, 4.21.0]
+        python-version: [3.11]  # 3.12, pypy-3.9
+        selenium-version:  [4.21.0]
         browser: [firefox, chrome, headlesschrome]  #edge
     
     steps:
@@ -40,10 +39,6 @@ jobs:
     - run: |
         echo Installed firefox versions: ${{ steps.setup-firefox.outputs.firefox-version }}
         ${{ steps.setup-firefox.outputs.firefox-path }} --version
-    - name: Start xvfb
-      run: |
-        export DISPLAY=:99.0
-        Xvfb -ac :99 -screen 0 1280x1024x16 > /dev/null 2>&1 &
     - name: Install dependencies
       if: matrix.python-version != 'pypy-3.7'
       run: |
