--- a/.github/workflows/robot-CI.yml
+++ b/.github/workflows/robot-CI.yml
@@ -1,5 +1,11 @@
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+name: Robot Framework CI2
+
+on:
+   push:
+    branches: [ "main" ]
+   pull_request:
+    branches: [ "main" ]
+   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -14,10 +20,10 @@ jobs:
       - uses: actions/checkout@v3
 
       #python and robotframework setup
-      - name: Set up Python 3.9
+      - name: Set up Python 3.11
         uses: actions/setup-python@v3
         with:
-          python-version: 3.9
+          python-version: 3.11
           cache: 'pip'
           
       - name: Install python dependencies
@@ -27,4 +33,4 @@ jobs:
       
       - name: Run tests
         run: |
-                 robot  TESTS
+                 robot  .
