--- a/.github/workflows/robot-CI.yml
+++ b/.github/workflows/robot-CI.yml
@@ -39,5 +39,5 @@ jobs:
         if: always()
         with:
            name: reports
-           path: ${{ github.workspace }}/reports
+           path: ${{ github.workspace }}/report
 
