--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -78,12 +78,12 @@ jobs:
     - name: Run tests with headless Chrome and with PyPy
       if: startsWith( matrix.python-version, 'pypy') == true
       run: |
-        xvfb-run --auto-servernum python primeiro_teste.robot --nounit --zip headlesschrome
+        robot .
 
     - name: Run tests with ${{ matrix.browser }} if CPython
       if: startsWith( matrix.python-version, 'pypy') == false
       run: |
-        xvfb-run --auto-servernum python primeiro_teste.robot --zip ${{ matrix.browser }}
+        robot .
 
     - uses: actions/upload-artifact@v1
       if: always()
