--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -1,8 +1,11 @@
 name: Robot Framework
 
 on:
-  push:
-    branches: [ master ]
+   #push:
+    #branches: [ "main" ]
+   #pull_request:
+    #branches: [ "main" ]
+   workflow_dispatch:
 
 jobs:
    build:
