--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -92,8 +92,8 @@ jobs:
       uses: joonvena/robotframework-docker-action@v0.1
       env:
         BROWSER: chrome
-        ROBOT_TESTS_DIR: ${{ github.workspace }}/robot_tests
-        ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
+        ROBOT_TESTS_DIR: ${{ github.workspace }}
+        ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
     - name: Upload test results
       uses: actions/upload-artifact@v1
       if: always()
