--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -110,12 +110,12 @@ jobs:
       uses: actions/download-artifact@v1
       with:
         name: report
-    - name: Get Repository Owner & Name
-      run: |
-        export OWNER="$(echo "${{ github.repository }}" | awk -F / '{print $1}' | sed -e "s/:refs//")"
-        export REPO="$(echo "${{ github.repository }}" | awk -F / '{print $2}' | sed -e "s/:refs//")"
-        echo "::set-env name=REPOSITORY_OWNER::$OWNER"
-        echo "::set-env name=REPOSITORY_NAME::$REPO"
+    #- name: Get Repository Owner & Name
+      #run: |
+        #export OWNER="$(echo "${{ github.repository }}" | awk -F / '{print $1}' | sed -e "s/:refs//")"
+        #export REPO="$(echo "${{ github.repository }}" | awk -F / '{print $2}' | sed -e "s/:refs//")"
+        #echo "::set-env name=REPOSITORY_OWNER::$OWNER"
+        #echo "::set-env name=REPOSITORY_NAME::$REPO"
     - name: Send report to commit
       uses: joonvena/robotframework-reporter-action@v0.1
       env:
