--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -77,10 +77,12 @@ jobs:
     - name: Run tests with headless Chrome and with PyPy
       if: startsWith( matrix.python-version, 'pypy') == true
       run: |
-        echo ${{ github.event }}
-        echo "$GITHUB_CONTEXT"
         robot primeiro_teste.robot
-
+   upload_test_results:
+    runs-on: ubuntu-latest
+    name: Upload results from ${{ github.event.name }}
+    steps:
+        - run: echo ${{ github.event }}
     #- name: Run tests with ${{ matrix.browser }} if CPython
       #if: startsWith( matrix.python-version, 'pypy') == false
       #run: |
