--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -109,6 +109,7 @@ jobs:
           uses: actions/download-artifact@v1
           with:
             name: reports
+            report_path: ${{ github.workspace }}
         - name: Send report to commit
           uses: joonvena/robotframework-reporter-action@v2
           with:
