--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -78,6 +78,10 @@ jobs:
       if: startsWith( matrix.python-version, 'pypy') == true
       run: |
         robot ./cadastro/nome/progressivo/CADBLC-1764/TC_AlteracaoIntituicaoFinanceira_NaoEnviaContaB3i.robot
+    - name: Run tests with headless Chrome and with PyPy
+      if: startsWith( matrix.python-version, 'pypy') == true
+      run: |   
+        robot ./cadastro/nome/progressivo/CADBLC-1764/TC_AlteracaoIntituicaoFinanceira_NaoEnviaContaB3i.robot
     #- name: Run robot tests
       #run: |
             #cd robot-framework
