--- a/.github/workflows/robot-CI.yml
+++ b/.github/workflows/robot-CI.yml
@@ -1,43 +1,42 @@
 name: Robot Framework CI2
 
-on:
-   #push:
-    #branches: [ "main" ]
-   #pull_request:
-    #branches: [ "main" ]
-   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+on: 
+ workflow_dispatch:
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  test:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      #python and robotframework setup
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
-          python-version: 3.11
-          cache: 'pip'
-          
-      - name: Install python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
+          distribution: zulu
+          java-version: 17
+
       - name: Run tests
-        run: |
-           robot  .
-      - name: Upload test results
-        uses: actions/upload-artifact@v1
+        run: ./gradlew clean test
+
+      - name: Load test report history
+        uses: actions/checkout@v3
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.7
         if: always()
         with:
-           name: reports
-           path: ${{ github.workspace }}/report
+          gh_pages: gh-pages
+          allure_history: allure-history
+          allure_results: build/allure-results
 
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v3
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
