--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -84,8 +84,7 @@ jobs:
         #robot ./cadastro/nome/progressivo/CADBLC-1764/TC_AlteracaoIntituicaoFinanceira_NaoEnviaContaB3i.robot
     - name: Run robot tests
       run: |
-            cd ./cadastro/nome/progressivo/CADBLC-1764/
-            python -m robot -i PROGRESSIVO_FILA_EVENTO_PARTICIPANTE_NAO_GERA_EVENTO TC_AlteracaoIntituicaoFinanceira_NaoEnviaContaB3i.robot
+         python -m robot -N 'Progressivo: Alteração Dados Participante' -d '.\cadastro\nome\progressivo\CADBLC-1764\Resultados\NaoGeraEvento\' -i PROGRESSIVO_FILA_EVENTO_PARTICIPANTE_NAO_GERA_EVENTO '.\cadastro\nome\progressivo\CADBLC-1764\'
     #- name: publish test results
       #uses: actions/upload-artifact@v1
       #with:
