--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -87,6 +87,7 @@ jobs:
          python -m robot -N 'Progressivo: Alteração Dados Participante' -d ./cadastro/nome/progressivo/CADBLC-1764/Resultados/NaoGeraEvento -i PROGRESSIVO_FILA_EVENTO_PARTICIPANTE_NAO_GERA_EVENTO ./cadastro/nome/progressivo/CADBLC-1764
     - name: publish test results
       uses: actions/upload-artifact@v1
+      if: always()
       with:
          name: report
          path: ./cadastro/nome/progressivo/CADBLC-1764/Resultados/NaoGeraEvento
